# otus_hw_4

./: CMakeLists.txt  README.md  main.cpp  sfinae_templates.h
.github/workflows/: release.yaml
